Add test and dashboard
